# arduino-uno-freertos

./: CMakeLists.txt  README.md  REAMDE.md
cmake/: avr-atmega328p.cmake  avr.cmake  compiler-config.cmake  macros.cmake
include/: FreeRTOSConfig.h  portable.h
scripts/: arduino-install.sh
src/: CMakeLists.txt  main.c
src/portable/: port.c
